Fixed issue with bid view not working on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -16611,3 +16611,57 @@ label {
   transition: all 0.3s ease;
   display: flex;
 }
+
+.bid-display-head-container {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+}
+
+.bid-display-head {
+  display: flex;
+  align-items: center;
+}
+
+.bid-display-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+  border-radius: 100px;
+  background-color: #ff008a;
+  color: white;
+  font-family: Outfit;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: var(--Label-Large-Tracking, 0.1px);
+  border: none;
+  font-family: Outfit;
+  width: 120px;
+}
+
+
+
+@media (max-width: 768px) {
+  .bid-display-head-container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .bid-display-head {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .bid-display-button {
+    width: 100%;
+    padding: 10px 0;
+  }
+  .bid-display-btn-container {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+}
